syntax = "proto3";

package environmental;

// The service definition
service EnvManagement {
    // Client-side RPC to switch on lights in response to natural light data
    rpc streetLights (stream LightData) returns (LightIlluminate) {}
}

// Client-5: Client-side gRPC streaming of natural light data and switching on street lights

// Message to send light levels data
message LightData {
int64 timeStamp = 1; // Time in UTC
int64 sensorID = 2; // id of the light sensor
int64 lightAmount = 3; // amount of light per unit area
}
 
// Message to respond with street light illumination
message LightIlluminate {
string message = 1; // message that the street lights have been switched on
}